--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </ul>
             <div class="container">
               <div class="text-block">
-                <h4 class="test">
-                  Test
+                <h4 class="homeText">
+                  Test Photo
                 </h4>
               </div>
               </div>
@@ -43,7 +43,7 @@
         </style>
   </head>
       <Body>
-
+        
           
       </Body>
 
