--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,14 @@
         <div class="video">
           <iframe width="720" height="480" src="https://www.youtube.com/embed/MeDC8MzWRaE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <div class="main" id="section1">
+          <h2>Web Development</h2>
+          <img src="webdev.png" width="720" height="480" alt="Web Dev">
+        </div>
+        
+        <div class="main" id="section2">
+          <h2>Section 2</h2>
+        </div>
       </Body>
 
 
