--- a/portfolio.html
+++ b/portfolio.html
@@ -47,13 +47,11 @@
           <iframe width="720" height="480" src="https://www.youtube.com/embed/MeDC8MzWRaE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="main" id="section1">
-          <h2>Web Development</h2>
-          <img src="webdev.png" width="720" height="480" alt="Web Dev">
+          <h2><a id="Project1" href="https://zapro9.github.io/Project1/" target="_blank">Web Development</a></h2>
+          <a href="https://github.com/Zapro9/Project1" target="_blank">
+            <img border="0" src="webdev.png" width="720" height="480">
         </div>
         
-        <div class="main" id="section2">
-          <h2>Section 2</h2>
-        </div>
       </Body>
 
 
