Resume added and style changes

--- a/education.html
+++ b/education.html
@@ -32,7 +32,7 @@
             <div class="container">
               <div class="text-block">
                 <h4 class="test">
-                  Test
+                  <a id="resume" href="WebDev Resume.pdf" target="_blank">Professional Resume</a>
                 </h4>
               </div>
               </div>
