--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Welcome!</title>
-          <link rel="stylesheet" href="indexstyle.css">
-          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+      <link rel="stylesheet" href="indexstyle.css">
             <div class="Header">
               <h1 class="HomePage">
                 <span>
@@ -12,7 +12,7 @@
                 </span>
               </h1>
             </div>
-            <ul class="nav justify-content-center">
+            <ul class="nav justify-content-center" id="navBar">
                 <li class="home">
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
@@ -36,11 +36,7 @@
                 </h4>
               </div>
               </div>
-        <style>
-            body {
-              background-image: url("https://i.ytimg.com/vi/2R6n4c5b1ek/maxresdefault.jpg");
-            }
-        </style>
+       
   </head>
       <Body>
         <div class="video">
