--- a/portfolio.html
+++ b/portfolio.html
@@ -48,9 +48,9 @@
             <img border="0" src="webdev.png" width="720" height="480">
         </div>
         <div class="main" id="section2">
-          <h2><a id="Project1" href="https://github.com/samanthascott1992/Project2" target="_blank">Web Development</a></h2>
+          <h2><a id="Project1" href="https://github.com/samanthascott1992/Project2" target="_blank">HTML and CSS STYLING</a></h2>
           <a href="https://github.com/samanthascott1992/Project2" target="_blank">
-            <img border="0" src="webdev.png" width="720" height="480">
+            <img border="0" src="webDev2.png" width="720" height="480">
         </div>
         
       </Body>
